--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="D:\web development\css-my site\images\cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="cloud.png" alt="cloud-img">
     <h1>I'm Ashutosh.</h1>
     <h2 class="pro">a <span>pro</span>grammer</h2>
-    <img class="bottom-cloud" src="D:\web development\css-my site\images\cloud.png" alt="cloud-img">
-    <img src="D:\web development\css-my site\images\mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="cloud.png" alt="cloud-img">
+    <img src="mountain.png" alt="mountain-img">
 
   </div>
   <div class="middle-container">
