--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </div>
   <div class="middle-container">
     <div class="profile">
-      <img class="myimg"src="D:\remove project folder\HTML - personal site\circle-cropped.png" alt="my image">
+      <img class="myimg"src="circle-cropped.png" alt="my image">
       <h2>Hello.</h2>
       <p class="intro">I am a programmer new to this world wants to and this is my first Website using css it's kind of cool and I like it .</p>
     </div>
@@ -29,7 +29,7 @@
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="coding" src="D:\web development\css-my site\images\computer.png" alt="computer">
+        <img class="coding" src="computer.png" alt="computer">
         <h3>Learning Programming</h3>
         <p>It's actually very fun to learn something like coding for me but it's headace for some people so I think it's Learning coding is also a big deal and a set of skills a person should have to learn code.</p>
       </div>
