--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="profile">
       <img class="myimg"src="circle-cropped.png" alt="my image">
       <h2>Hello.</h2>
-      <p class="intro">I am a programmer new to this world wants to and this is my first Website using css it's kind of cool and I like it .</p>
+      <p class="intro">I am a programmer new to this world wants to explore it and this is my first Website using css it's kind of cool and I like it .</p>
     </div>
     <hr>
     <div class="skills">
@@ -31,7 +31,7 @@
       <div class="skill-row">
         <img class="coding" src="computer.png" alt="computer">
         <h3>Learning Programming</h3>
-        <p>It's actually very fun to learn something like coding for me but it's headace for some people so I think it's Learning coding is also a big deal and a set of skills a person should have to learn code.</p>
+        <p>It's actually very fun to learn something like coding for me but it's headace for some people so I think Learning coding is also a big deal and a set of skills a person should have to learn code.</p>
       </div>
       <div class="skill-row">
         <img class="thinking" src="https://media.giphy.com/media/d9IfL7seBexHLct75B/source.gif" alt="">
