--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
       <div class="skill-row">
         <img class="coding" src="computer.png" alt="computer">
         <h3>Learning Programming</h3>
-        <p>It's actually very fun to learn something like coding for me but it's headace for some people so I think Learning coding is also a big deal and a set of skills a person should have to learn code.</p>
+        <p>It's actually very fun to learn something like coding for me but it's headace for some people so I think Learning coding is also a big deal and a set of skills a person should have to learn coding.</p>
       </div>
       <div class="skill-row">
         <img class="thinking" src="https://media.giphy.com/media/d9IfL7seBexHLct75B/source.gif" alt="">
         <h3>Thinking The Unthinkable and dedication</h3>
-        <p>I am really dedicated towards learning new things and coding is the number one thing in that list and from my experence I have learned the dedication is very necessary thing in this field.</p>
+        <p>I am really dedicated towards learning new things and coding is the number one thing in that list and from my experence I have learned the dedication is very necessary thing in this field and I am a fully dedicated person.</p>
       </div>
     </div>
     <hr>
